--- a/Rezerwacja sal/Rezerwacja sal.vcxproj
+++ b/Rezerwacja sal/Rezerwacja sal.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="main.c" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="rezerwacje.csv" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
