--- a/Rezerwacja sal/Rezerwacja sal.vcxproj.filters
+++ b/Rezerwacja sal/Rezerwacja sal.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="rezerwacje.csv">
+      <Filter>Pliki źródłowe</Filter>
+    </None>
+  </ItemGroup>
 </Project>
