--- a/Rezerwacja sal/Rezerwacja sal.vcxproj.filters
+++ b/Rezerwacja sal/Rezerwacja sal.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.c">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="guimain.c">
+    <ClCompile Include="resource.c">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
